# stratadex

./: .gitignore  CMakeLists.txt  README.md  stratadex.qrc
src/: combo_direction.hpp  main.cpp  main_menu.cpp  main_menu.hpp  main_menu.ui  main_window.cpp  main_window.hpp  project_config.h.in  quiz.cpp  quiz.hpp  strat_combo_edit.cpp  strat_combo_edit.hpp  stratagem.cpp  stratagem.hpp  stratagem_model.cpp  stratagem_model.hpp
src/ui/: main_menu.ui  quiz.ui  stratadex_main_window.ui
